# lowlatencydancegamesdk

./: .gitignore  .gitmodules  CMakeLists.txt
include/: lowlatencydancegamesdk.h
src/: lowlatencydancegamesdk.cpp
src/adapters/: AdapterBase.c  AdapterBase.h
src/adapters/FoamPad/: FoamPadAdapter.c  FoamPadAdapter.h
src/adapters/SMXStage/: SMXStageAdapter.c  SMXStageAdapter.h
src/smx-dll-wrapper/: SMX.cpp
